# maodie

./: .gitignore  CMakeLists.txt  build.bat  readme.md
.github/workflows/: compile.yml
3rd/SFML-2.6.0/install/lib/: sfml-main.lib
include/: Fruit.h  Game.h  HighScoreManager.h  HighScoreScreen.h  NameInputScreen.h  Screen.h  SettingsScreen.h  Snake.h  SnakeNode.h
src/: Fruit.cpp  Game.cpp  GameOverScreen.cpp  GameScreen.cpp  HighScoreManager.cpp  HighScoreScreen.cpp  MenuScreen.cpp  NameInputScreen.cpp  Screen.cpp  SettingsScreen.cpp  Snake.cpp  SnakeNode.cpp
